[gd_scene load_steps=16 format=2]

[ext_resource path="res://game/Fonts/fontTheme.tres" type="Theme" id=1]
[ext_resource path="res://game/Maps/Map 1.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Assets/Music/fighting - theme 1.wav" type="AudioStream" id=3]
[ext_resource path="res://game/Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://game/Assets/Music/selectNoise.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Select:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Start:custom_colors/font_color_focus")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.713726, 0.364706, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Start:custom_colors/font_color_hover")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.713726, 0.364706, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ThemePlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeTheme"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("ThemePlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.4 ),
"transitions": PoolRealArray( 1, 1, 38.0547 ),
"update": 0,
"values": [ 0.0, -7.334, -37.408 ]
}

[sub_resource type="Animation" id=2]
resource_name = "selectStart"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Select:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Start:custom_colors/font_color_focus")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.141176, 0.713726, 0.364706, 1 ), Color( 1, 0.380392, 0.192157, 1 ), Color( 0.141176, 0.713726, 0.364706, 1 ), Color( 1, 0.380392, 0.192157, 1 ), Color( 0.141176, 0.713726, 0.364706, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Start:custom_colors/font_color_hover")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.141176, 0.713726, 0.364706, 1 ), Color( 1, 0.380392, 0.192157, 1 ), Color( 0.141176, 0.713726, 0.364706, 1 ), Color( 1, 0.380392, 0.192157, 1 ), Color( 0.141176, 0.713726, 0.364706, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "fadeTheme"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "selectStart"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=7]
states/RESET/node = SubResource( 10 )
states/RESET/position = Vector2( 246, 114 )
states/fadeTheme/node = SubResource( 4 )
states/fadeTheme/position = Vector2( 363, -13 )
states/selectStart/node = SubResource( 5 )
states/selectStart/position = Vector2( 579, 41 )
transitions = [ "RESET", "selectStart", SubResource( 11 ), "selectStart", "fadeTheme", SubResource( 12 ) ]
start_node = "RESET"
graph_offset = Vector2( -11, -63 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Map 1" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -79.0
margin_right = 139.0
margin_bottom = 79.0
theme = ExtResource( 1 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 278.0
margin_bottom = 50.0
custom_colors/font_color_focus = Color( 0.141176, 0.713726, 0.364706, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.141176, 0.713726, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.615686, 0.00392157, 1 )
text = "Start"
flat = true

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 278.0
margin_bottom = 104.0
custom_colors/font_color_focus = Color( 0.141176, 0.713726, 0.364706, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.141176, 0.713726, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.615686, 0.00392157, 1 )
text = "Options"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 278.0
margin_bottom = 158.0
custom_colors/font_color_focus = Color( 0.141176, 0.713726, 0.364706, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.141176, 0.713726, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.615686, 0.00392157, 1 )
text = "Quit"
flat = true

[node name="ThemePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="StartDelay" type="Timer" parent="."]
wait_time = 1.8

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="buttonAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fadeTheme = SubResource( 3 )
anims/selectStart = SubResource( 2 )

[node name="musicTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../buttonAnimations")
active = true
parameters/playback = SubResource( 8 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="StartDelay" to="." method="_on_StartDelay_timeout"]
